--- a/style.css
+++ b/style.css
@@ -2,8 +2,19 @@
     min-height: 50px;
     padding: 5px;
     margin: 5px;
+    opacity: 40%;
     font-weight: 800;
     color: rgb(255, 0, 85);
+  }
+  /* positioning the SD county image */
+  #countyimg {
+    width: 30%;
+    height: auto;
+  }
+  .responsive
+  {
+    width:90%;
+    height:auto;
   }
   * {
     margin: 0; padding: 0;
@@ -142,3 +153,11 @@
   #footer a:last-child {
     float: right;
   }
+  /* to put map on bottom right of main screen */
+.responsive {
+  top:0;
+  left: unset;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
