--- a/static/css/style.css
+++ b/static/css/style.css
@@ -162,11 +162,11 @@
   right: 0;
 } */
 #map {
-  width: 600px;
-  height: 400px;
+  width: 300px;
+  height: 200px;
   top:unset;
   left: 0;
-  position: relative;
-  bottom: 10;
+  position: absolute;
+  bottom: 0;
   right: unset;
 }
