--- a/templates/index.html
+++ b/templates/index.html
@@ -26,8 +26,9 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-2">
+      <div class="col-md-3">
         <div class="well">
+          1 of 3
           <h5> City:</h5>
           <select id="selDataset" onchange="optionChanged(this.value)">
             <option value="San_Diego">San Diego</option>
@@ -74,22 +75,27 @@
           </select>
         </div>
       </div>
-      <!-- <div class="col-md-3">
-        <div id="scatter"></div>
-      </div> -->
-      <div class="col-md-10">
+      <!-- empty column -->
+      <div class = "col-md-3">2 of 3</div>
+      
+      <!-- map column -->
+      <div class="col-md-3">
+        3 of 3
         <div id="map"></div>
       </div>
-      <div class="col-md-10">
-        <div id="lollipop"></div>
+
+      <div class="row">
+        <div class="col-md-6">
+          1 of 2
+          <div id="lollipop"></div>
+        </div>
+      <div class="col-md-6">
+        2 of 2
+        <div id="scatter"></div>
+      </div> 
       </div>
-    </div>
-    <!-- <nav class="navbar fixed-bottom">
-      <div class="navbar-nav navbar-right">
-        <img src="{{url_for('static', filename='./media/sandiegocounty.PNG')}}" id = "countyimg" alt="San Diego County Map" class = "responsive">
-      </div>
-  </nav> -->
-</div>
+      </div> 
+
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
     integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
     crossorigin=""/>
