--- a/templates/index.html
+++ b/templates/index.html
@@ -111,8 +111,8 @@
   <script src="https://d3js.org/d3.v4.js"></script>
   <script src="{{url_for('static', filename='./js/lollipop.js')}}"></script>
   <script src="{{url_for('static', filename='./js/config.js')}}"></script>
-  <script src="{{url_for('static', filename='./js/chloropleth.js')}}"></script>
-  <script src="{{url_for('static', filename='./js/chloroplethlogic.js')}}"></script>
+  <!-- <script src="{{url_for('static', filename='./js/chloropleth.js')}}"></script> -->
+  <script src="{{url_for('static', filename='./js/layermap.js')}}"></script>
   <script src="{{url_for('static', filename='./js/bideo.js')}}"></script>
   <script src="{{url_for('static', filename='./js/main.js')}}"></script>
   
