The Lollipop chart works

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
         <div class="well">
           1 of 3
           <h5> City:</h5>
-          <select id="selDataset" onchange="optionChanged(this.value)">
+          <select id="selDataset" onchange="update_chart(this.value)">
             <option value="San_Diego">San Diego</option>
             <option value="Chula_Vista">Chula Vista</option>
             <option value="Oceanside">Oceanside</option>
