--- a/templates/index.html
+++ b/templates/index.html
@@ -91,10 +91,11 @@
         </div>
       <div class="col-md-6">
         2 of 2
-        <div id="scatter"></div>
+        <div id="scatterline"></div>
       </div> 
       </div>
-      </div> 
+    </div> 
+  </div> 
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
     integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
@@ -115,6 +116,7 @@
   <script src="{{url_for('static', filename='./js/layermap.js')}}"></script>
   <script src="{{url_for('static', filename='./js/bideo.js')}}"></script>
   <script src="{{url_for('static', filename='./js/main.js')}}"></script>
+  <script src="{{url_for('static', filename='./js/scatterline.js')}}"></script>
   
 
 </body>
